--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -18,7 +18,8 @@
     border-radius: 12px;
     background: $secondary;
     width: 50%;
-    padding: 87px 120px;
+    // padding: 87px 120px;
+    padding: 5% 10% 8% 10%;
     position: relative;
     overflow: hidden;
 
@@ -38,11 +39,17 @@
       line-height: 36px;
       color: $white;
     }
+
+    .sliderImg {
+      margin-top: 65px;
+      max-width: 100%;
+    }
   }
 
   .right {
     width: 50%;
-    padding: 300px 180px;
+    // padding: 300px 180px;
+    padding: 17% 10%;
     position: relative;
 
     .midAsterisk {
