--- a/src/pages/Member/Static/styles.module.scss
+++ b/src/pages/Member/Static/styles.module.scss
@@ -5,6 +5,18 @@
   height: 100vh;
   background: $offwhite;
   padding: 40px;
+
+  &.tc {
+    padding: 40px 15%;
+    box-shadow: border-box;
+    p {
+      color: #8A8A8A;
+      font-family: 'Roboto';
+      font-size: 16px;
+      letter-spacing: 0.1px;
+      line-height: 19px;
+    }
+  }
 }
 
 .contentWrapper {
