--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -191,7 +191,20 @@ hr.MuiDivider-root {
   img {
     max-width: 100%;
   }
-  p {
+  h1 {
+    font-family: 'Roboto-Bold';
+    font-size: 24px;
+    letter-spacing: 0.75px;
+    line-height: 28px;
+  }
+  h2 {
+    font-family: 'Roboto';
+    font-size: 20px;
+    letter-spacing: 0.4px;
+    line-height: 24px;
+  }
+  p,
+  * {
     font-family: 'Roboto';
     font-size: 16px;
     letter-spacing: 0.1px;
@@ -204,6 +217,22 @@ hr.MuiDivider-root {
     letter-spacing: 0.09px;
     line-height: 16px;
     color: $primary;
+  }
+}
+
+.cardBody.preview {
+  img {
+    display: none;
+  }
+  p,
+  h1,
+  h2,
+  * {
+    font-family: 'Roboto' !important;
+    font-size: 16px;
+    letter-spacing: 0.1px;
+    line-height: 24px;
+    font-weight: normal;
   }
 }
 
