--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -9,6 +9,15 @@ div.paper {
 
 .contentWrapper {
   padding: 30px;
+
+  .title {
+    color: $darkgray2;
+    font-family: 'Roboto';
+    font-size: 20px;
+    letter-spacing: 0.13px;
+    line-height: 24px;
+    font-weight: normal;
+  }
 }
 
 // Parent Title
