--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -318,6 +318,7 @@ hr.MuiDivider-root {
     font-size: 16px;
     letter-spacing: 0.1px;
     line-height: 19px;
+    overflow: hidden;
     .ql-toolbar.ql-snow {
       border-top-left-radius: 8px;
       border-top-right-radius: 8px;
