update: contribution form transfer to formik

--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -3,6 +3,27 @@
 .form {
   padding-right: 5vh;
 
+  .input {
+    height: 45px;
+    border: 1px solid rgba(178, 180, 189, 0.5);
+    border-radius: 8px;
+    padding: 0 17px;
+    color: $gray;
+    font-size: 16px;
+    letter-spacing: 0.1px;
+    line-height: 19px;
+    background: $white;
+    width: 100%;
+
+    &.white {
+      background: $white;
+    }
+
+    &.offwhite {
+      background: $offwhite;
+    }
+  }
+
   .label {
     color: $darkgray1;
     font-family: 'Roboto-Medium';
@@ -25,16 +46,20 @@
     text-decoration: none;
   }
 
-  .list {
+  .field {
     width: 100%;
 
-    .typography {
-      color: #E84441;
+    .list {
+      width: 100%;
 
-      .deleteIcon {
-        position: relative;
-        top: 2px;
-        margin-right: 6px;
+      .typography {
+        color: #e84441;
+
+        .deleteIcon {
+          position: relative;
+          top: 2px;
+          margin-right: 6px;
+        }
       }
     }
   }
@@ -43,7 +68,7 @@
     background-color: inherit;
     border: none;
     outline: none;
-    
+
     .btnBack:focus,
     .btnBack:active:focus,
     .btnBack.active:focus,
