--- a/src/components/Card/CommentsOverview/styles.module.scss
+++ b/src/components/Card/CommentsOverview/styles.module.scss
@@ -1,4 +1,3 @@
-
 @import '~global/styles';
 
 .commentsWrapper {
@@ -13,21 +12,31 @@
       background: $offwhite;
       border-bottom: none;
 
-      &+ .comment {
+      & + .comment {
         border-top: none;
-      } 
+      }
     }
 
-    &+ .comment {
+    & + .comment {
       margin-top: 0;
     }
 
     .avatar {
       margin-right: 17px;
-      background: nth($avatar-colors, random(length($avatar-colors)));
+      background: nth(
+        $avatar-colors,
+        random(length($avatar-colors))
+      );
     }
 
-    .form, .input{
+    .guest {
+      margin-right: 17px;
+      width: 40px;
+      margin-top: -100px;
+    }
+
+    .form,
+    .input {
       width: 100%;
     }
   }
@@ -68,7 +77,10 @@
 
       .avatar {
         margin-right: 17px;
-        background: nth($avatar-colors, random(length($avatar-colors)));
+        background: nth(
+          $avatar-colors,
+          random(length($avatar-colors))
+        );
       }
 
       .name {
@@ -103,12 +115,12 @@
     padding: 15px;
     background: $white;
     border-radius: 8px;
-    box-shadow: 0 2px 30px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.15);
     position: relative;
     min-width: 100px;
 
-    &:after{
-      content:'';
+    &:after {
+      content: '';
       position: absolute;
       border: 10px solid transparent;
       border-bottom: 10px solid $white;
@@ -119,19 +131,19 @@
 
   button.actionButton {
     background: transparent;
-    font-family: "Roboto";
+    font-family: 'Roboto';
     font-size: 15px;
     letter-spacing: 0.44px;
     line-height: 16px;
     color: $darkgray1;
     text-transform: capitalize;
     padding: 0;
-  
+
     &:hover,
     &:focus {
       background: inherit;
     }
-  
+
     img {
       margin-right: 7px;
       width: 15px;
@@ -141,7 +153,7 @@
 
 .input {
   width: 100%;
-  border: 1px solid rgba(178,180,189,0.5);
+  border: 1px solid rgba(178, 180, 189, 0.5);
   box-shadow: none;
   font-size: 16px;
   letter-spacing: 0.1px;
