--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -667,6 +667,14 @@ ul.slick-dots {
   }
 }
 
+a {
+  white-space: pre-wrap;      /* CSS3 */   
+   white-space: -moz-pre-wrap; /* Firefox */    
+   white-space: -pre-wrap;     /* Opera <7 */   
+   white-space: -o-pre-wrap;   /* Opera 7 */    
+   word-wrap: break-word;      /* IE */
+}
+
 button.slick-arrow.slick-prev {
   right: 35px;
   bottom: -14%;
