--- a/src/components/Tags/QuestionTags/styles.module.scss
+++ b/src/components/Tags/QuestionTags/styles.module.scss
@@ -1,28 +1,28 @@
 @import '~global/styles';
 
 .root {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 15px;
+  display: flex!important;
+  flex-wrap: wrap!important;
+  list-style: none!important;
+  margin: 0!important;
+  padding: 0!important;
+  margin-bottom: 15px!important;
 
   .chip { 
-    text-align: center;
-    margin-right: 5px;
-    border: 1px solid rgba(178, 180, 189, 0.5);
-    border-radius: 12.5px;
-    height: 20px;
-    text-transform: uppercase;
+    text-align: center!important;
+    margin-right: 5px!important;
+    border: 1px solid rgba(178, 180, 189, 0.5)!important;
+    border-radius: 12.5px!important;
+    height: 20px!important;
+    text-transform: uppercase!important;
 
     span {
-      padding: 0 8px;
-      font-family: "Roboto-Medium";
-      color: $gray;
-      font-size: 12px;
-      letter-spacing: 0.38px;
-      line-height: 14px;
+      padding: 0 8px!important;
+      font-family: "Roboto-Medium"!important;
+      color: $gray!important;
+      font-size: 12px!important;
+      letter-spacing: 0.38px!important;
+      line-height: 14px!important;
     }
   }
 }
@@ -30,7 +30,7 @@
 @media screen and (max-width: 959px) {
   .root {
     .chip {
-      margin-bottom: 5px;
+      margin-bottom: 5px!important;
     }
   }
 }
