update onboarding and notification

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -514,6 +514,8 @@ span {
   &.analysis {
     color: $purple;
     background-color: #E9E2EC;
+    padding: 3px 15px 3px 15px;
+    border-radius: 15px;
   }
 }
 
