--- a/src/components/LeftSidebar/styles.module.scss
+++ b/src/components/LeftSidebar/styles.module.scss
@@ -14,6 +14,11 @@ div.drawerPaper {
   overflow: hidden;
 }
 
+.comment:hover {
+  opacity:0.7;
+  cursor: context-menu;
+}
+
 .mainNav {
   padding: 45px 40px;
   display: flex;
