--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -77,13 +77,14 @@
     .backNav {
       margin-bottom: 30px;
       cursor: pointer;
+      width: 100%;
 
       h4.back {
         font-family: 'Roboto';
 
         .icon {
           position: relative;
-          top: -1px;
+          top: 2px;
           margin-right: 15px;
         }
       }
