update snackbar messages

--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -15,6 +15,10 @@ div.paper {
     font-size: 18px;
   }
 
+  .headerTitle {
+    cursor: pointer;
+  }
+
   .title {
     color: $darkgray2;
     font-family: 'Roboto';
