--- a/src/components/ContributionTree/styles.module.scss
+++ b/src/components/ContributionTree/styles.module.scss
@@ -1,131 +1,90 @@
 @import '~global/styles';
 
 
-.contributionTree {
+.heirarchyWrapper {
+  margin-top: 50px;
+  color: white;
+
   .title {
-    color: $white;
-    margin: 40px 0;
+    color: white
   }
-  
-  ul.tree {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    align-items: center;
-  
-    li { 
-      height: 18px;
-      width: 30px;
-      border-radius: 3px;
-      text-align: center;
-      margin-right: 7px;
-      position: relative;
-      color: $white;
-      cursor: pointer;
-      text-transform: uppercase;
-      line-height: 18px;
-      opacity: 0.5;
 
-      &.active {
-        opacity: 1;
-      }
-
+  ul.heirarchyList {
+    margin-left: -20px;
+    list-style: none;
+    text-align: center;
+    
+    li.contribution {
+      list-style: none;
+      // activeColor
       &.question {
         background: $yellow;
+        width: 20px;
+        border-radius: 2px;
+        height: 20px;
       }
       &.hypothesis {
         background: $orange;
+        width: 20px;
+        border-radius: 2px;
+        height: 20px;
       }
       &.experiment {
         background: $green;
+        width: 20px;
+        border-radius: 2px;
+        height: 20px;
       }
       &.data {
         background: $indigo;
+        width: 20px;
+        border-radius: 2px;
+        height: 20px;
       }
       &.analysis {
         background: $purple;
-      }
-
-      &:last-child {
-        &.question,
-        &.hypothesis,
-        &.experiment,
-        &.data {
-          &::after {
-            content: '';
-            border-top: none;
-          }
-        }
-      }
-      
-  
-      &::after {
-        content: '';
-        width: 7px;
-        display: block;
-        position: absolute;
-        right: -7px;
-        top: 8px;
-        border-top: 1px solid rgba(255, 255, 255, 0.5);
-      }
-
-      &.analysis::after{
-        display: none;
+        width: 20px;
+        border-radius: 2px;
+        height: 20px;
       }
     }
-
-    ul.subtree {
+  }
+  
+  $border: #ddd;
+  $border-hover: #aaa;
+  $bg-hover: #eee;
+  $text: #888;
+  $text-hover: #000;
+  $ident: 40px;
+  $left: -($ident);
+  
+  .wtree {
+    li {
       list-style-type: none;
-      padding-left: 7px;
-      margin-top: 3px;
-
-      li {
-        margin-bottom: 5px;
-        opacity: 0.5;
-
-        &.active {
-          opacity: 1;
-        }
-        &:first-child {
-          &::after {
-            content: '';
-            width: 7px;
-            display: block;
-            position: absolute;
-            left: -7px;
-            top: 8px;
-            border-top: 1px solid rgba(255, 255, 255, 0.5);
-            border-left: 1px solid rgba(255, 255, 255, 0.5);
-            height: 13px;
-            border-bottom: none;
-          }
-        }
-        &:nth-child(2) {
-          &::after {
-            content: '';
-            width: 7px;
-            display: block;
-            position: absolute;
-            left: -7px;
-            top: -3px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-            border-left: 1px solid rgba(255, 255, 255, 0.5);
-            height: 13px;
-            border-top: none !important;
-          }
-        }
-        &::after {
-          content: '';
-          width: 7px;
-          display: block;
-          position: absolute;
-          left: -7px;
-          top: -13px;
-          border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-          border-left: 1px solid rgba(255, 255, 255, 0.5);
-          height: 23px;
-          border-top: none;
-        }
+      margin: 10px 0 15px 10px;
+      position: relative;
+      &:before {
+        content: "";
+        position: absolute;
+        top:-10px;
+        left:$left;
+        border-left: 1px solid $border;
+        border-bottom:1px solid $border;
+        width:$ident;
+        height:40px;
+      }
+      &:after {
+        position:absolute;
+        content:"";
+        top:41px;
+        left:$left;
+        border-left: 1px solid $border;
+        border-top:1px solid $border;
+        width:$ident;
+        height:100%;
+      }
+      &:last-child:after {
+        display:none;
       }
     }
   }
