--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -68,6 +68,7 @@
     background-color: inherit;
     border: none;
     outline: none;
+    margin-top: 50px;
 
     .btnBack:focus,
     .btnBack:active:focus,
