--- a/src/components/ContributionTree/styles.module.scss
+++ b/src/components/ContributionTree/styles.module.scss
@@ -1,99 +1,119 @@
 @import '~global/styles';
 
-
-.heirarchyWrapper {
-  margin-top: 13px;
-  color: white;
-  height: 100%;
-  // margin-left: 20px;
-
+.main {
   .title {
+    margin-top: 10px;
     color: white
   }
-  .mainul {
-    margin-left: -40px;
-    margin-top: 10px;
-    overflow: auto;
-    height: 100%;
 
-    .childul {
+  .heirarchyWrapper {
+    margin-top: 13px;
+    color: white;
+    overflow-x: auto;
+    height: 400px;
+    width: 280px;
+    // overflow-y: hidden;
+    // overflow-x: hidden;
+  
+    $border: #ddd;
+    $border-hover: #aaa;
+    $bg-hover: #eee;
+    $text: #888;
+    $text-hover: #000;
+    
+    .questionUl {
       margin-top: 5px;
-      margin-left: -8px;
-    }
-  }
-  ul {
-    list-style-type: none;
-    li {
-      margin-top: 10px;
-      opacity: 0.7;
-      color: white;
-      &.active {
-        opacity: 1;
-      }
-      &.question {
-        background-color: $yellow;
-        text-align: center;
-        width: 20px;
-        height: 20px;
-        border-radius: 5px;
-      }
-      &.hypothesis {
-        background-color: $orange;
-        text-align: center;
-        width: 20px;
-        height: 20px;
-        border-radius: 5px;
-      }
-      &.experiment {
-        background-color: $green;
-        text-align: center;
-        width: 20px;
-        height: 20px;
-        border-radius: 5px;
-      }
-      &.data {
-        background-color: $indigo;
-        text-align: center;
-        width: 20px;
-        height: 20px;
-        border-radius: 5px;
-      }
-      &.analysis {
-        background-color: $purple;
-        text-align: center;
-        width: 20px;
-        height: 20px;
-        border-radius: 5px;
-      }
-    }
-  }
+      margin-left: -30px;
+      text-align: center;
+      li {
+        &.question {
+          background-color: $yellow;
+          width: 20px;
+          height: 20px;
+          border-radius: 3px;
+          opacity: 0.5;
 
-  //   ul.tree ul {
-  //     margin-left: 18px;
-  //   }
-  //   ul.tree li {
-  //     margin: 0;
-  //     padding: 0 7px;
-  //     line-height: 18px;
-  //     color: #369;
-  //     font-weight: bold;
-  //     border-left:1px solid grey;
-  //   }
-  //   ul.tree li:last-child {
-  //       border-left:none;
-  //   }
-  //   ul.tree li:before {
-  //     position:relative;
-  //     top:-0.3em;
-  //     height:1em;
-  //     width:12px;
-  //     color:white;
-  //     border-bottom:1px solid rgb(100,100,100);
-  //     content:"";
-  //     display:inline-block;
-  //     left:-7px;
-  //   }
-  //   ul.tree li:last-child:before {
-  //     border-left:1px solid rgb(100,100,100);   
-  //   }
+          &.active {
+            opacity: 1;
+          }
+        }
+      }
+    }
+    .wtree {
+      text-align: center;
+      li {
+        list-style-type: none;
+        position: relative;
+        margin: 10px 0px 0px 10px;
+
+        &:before {
+          content: "";
+          position: absolute;
+          top: -10px;
+          left: -35px;
+          border-left: 1px solid #ddd;
+          border-bottom: 1px solid #ddd;
+          width: 35px;
+          height: 21px;
+        }
+        &:after {
+          position: absolute;
+          content: "";
+          top: 10px;
+          left: -35px;
+          border-left: 1px solid #ddd;
+          border-top: 1px solid #ddd;
+          width: 20px;
+          height: 100%;
+        }
+        &:last-child:after {
+          display:none;
+        }
+      }
+    }
+
+    .uitree {
+      color: white;
+      li {
+        span {
+          color: white;
+          opacity: 0.8;
+          &.active {
+            opacity: 1;
+          }
+          &.question {
+            background-color: $yellow;
+            width: 20px;
+            height: 20px;
+            border-radius: 3px;
+          }
+          &.hypothesis {
+            background-color: $orange;
+            width: 20px;
+            height: 20px;
+            border-radius: 3px;
+          }
+          &.experiment {
+            background-color: $green;
+            width: 20px;
+            height: 20px;
+            border-radius: 3px;
+          }
+          &.data {
+            background-color: $indigo;
+            width: 20px;
+            height: 20px;
+            border-radius: 3px;
+          }
+          &.analysis {
+            background-color: $purple;
+            width: 20px;
+            height: 20px;
+            border-radius: 3px;
+          }  
+        }
+      }
+    }
+  }
+  
 }
