--- a/src/pages/Member/Question/components/styles.module.scss
+++ b/src/pages/Member/Question/components/styles.module.scss
@@ -35,7 +35,7 @@
   $left: -($ident);
   
   .wtree {
-    li {
+    .test {
       list-style-type: none;
       margin:10px 0 10px 10px;
       position: relative;
