--- a/src/components/ContributionTree/styles.module.scss
+++ b/src/components/ContributionTree/styles.module.scss
@@ -111,3 +111,14 @@
   }
   
 }
+
+.h5style {
+  margin-top: 10px;
+  color: white;
+  font-family: 'Roboto-Medium';
+  font-size: 14px;
+  letter-spacing: 0.44px;
+  line-height: 16px;
+  text-transform: uppercase;
+  display: block;
+}
