--- a/src/components/LeftSidebar/styles.module.scss
+++ b/src/components/LeftSidebar/styles.module.scss
@@ -83,7 +83,7 @@ div.drawerPaper {
     margin-left: -1px;
     
     .button {
-      background: $darkblue;
+      background: #11204c;
       border-radius: 8px;
       border: none;
       display: inline-flex;
