--- a/src/components/PageContentWrapper/styles.module.scss
+++ b/src/components/PageContentWrapper/styles.module.scss
@@ -29,3 +29,19 @@
     padding: 30px 15px 20px 20px
   }
 }
+
+.backNav {
+  .styles_back__3Wvtv {
+    font-size: 18px;
+    letter-spacing: 0.11px;
+    line-height: 21px;
+    color: #3a3a3a;
+    display:inline-block;
+  }
+}
+
+.styles_backNav__2Gf0S .styles_back__3Wvtv .styles_icon__3wAKo {
+    position: relative;
+    top: -1px;
+    margin-right: 15px;
+}
