--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -127,3 +127,14 @@
     }
   }
 }
+
+
+.backNav {
+  .styles_back__3Wvtv {
+    font-size: 18px;
+    letter-spacing: 0.11px;
+    line-height: 21px;
+    color: #3a3a3a;
+    display:inline-block;
+  }
+}
