--- a/src/pages/Member/Question/components/styles.module.scss
+++ b/src/pages/Member/Question/components/styles.module.scss
@@ -146,3 +146,12 @@
     color: rgba(255, 255, 255, 0.5);
   }
 }
+
+.styles_title__bTMaG {
+  font-family: 'Roboto-Medium';
+    font-size: 14px;
+    letter-spacing: 0.44px;
+    line-height: 16px;
+    text-transform: uppercase;
+    display: block;
+}
