--- a/src/pages/Member/UserContributions/styles.module.scss
+++ b/src/pages/Member/UserContributions/styles.module.scss
@@ -1,5 +1,28 @@
 @import '~global/styles';
 
+.h5style {
+  font-family: 'Roboto-Medium';
+  font-size: 14px;
+  letter-spacing: 0.44px;
+  line-height: 16px;
+  text-transform: uppercase;
+  display: inline-block;
+  font-weight: normal;
+}
+
+h2 {
+  span {
+    font-size: 20px;
+    letter-spacing: .4px;
+    line-height: 24px;
+  }
+}
+.style_backNav__iDCvu {
+  span {
+    display: inline-block;
+  }
+}
+
 .modal {
   display: 'flex';
   align-items: 'center';
@@ -132,4 +155,8 @@
 .loadingLabel {
   text-align: center;
   font-size: 16px;
+}
+
+.styles_edit__3U2vv .MuiIconButton-label {
+  color:#854ea5;
 }
