Notification and Style update

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -812,6 +812,13 @@ button.questionClass {
     }
   }
 }
+.style_paperListHeader__33tNS {
+  .style_sortWrapper__1eI4y {
+    .style_actionsWrapper__2i0X1 .style_button__15Mo8 {
+      color:#854ea5 !important;
+    }
+  }
+}
 
 .styles_contribute__1BGsS,
 .styles_edit__3U2vv {
