--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -819,6 +819,9 @@ button.questionClass {
     }
   }
 }
+.style_actionsWrapper__A9q5d .style_button__3scl9 {
+  color:#854ea5 !important;
+}
 
 .styles_contribute__1BGsS,
 .styles_edit__3U2vv {
