Style Contribution Tree

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -819,8 +819,12 @@ button.questionClass {
     }
   }
 }
-.style_actionsWrapper__A9q5d .style_button__3scl9 {
-  color:#854ea5 !important;
+.style_paperListHeader__1NoQ1 {
+  .style_sortWrapper__15YBa {
+    .style_button__3scl9 {
+      color:#854ea5 !important;
+    }
+  }
 }
 
 .styles_contribute__1BGsS,
