--- a/src/components/ContributionTree/styles.module.scss
+++ b/src/components/ContributionTree/styles.module.scss
@@ -9,7 +9,7 @@ span {
   }
   &.hypothesis {
     color: white;
-    background-color: orange;
+    background-color: darkorange;
     padding: 3px 10px 3px 10px;
     border-radius: 6px;
   }
