update contrast issue

--- a/src/components/Tags/QuestionTags/styles.module.scss
+++ b/src/components/Tags/QuestionTags/styles.module.scss
@@ -11,7 +11,7 @@
   .chip { 
     text-align: center!important;
     margin-right: 5px!important;
-    border: 1px solid rgba(178, 180, 189, 0.5)!important;
+    border: 1px solid #55585B!important;
     border-radius: 12.5px!important;
     height: 20px!important;
     text-transform: uppercase!important;
@@ -19,7 +19,7 @@
     span {
       padding: 0 8px!important;
       font-family: "Roboto-Medium"!important;
-      color: $gray!important;
+      color: #55585B!important;
       font-size: 12px!important;
       letter-spacing: 0.38px!important;
       line-height: 14px!important;
