--- a/src/components/Tags/AnalysisTag/styles.module.scss
+++ b/src/components/Tags/AnalysisTag/styles.module.scss
@@ -3,7 +3,7 @@
 .chip {
   text-align: center;
   margin-right: 5px;
-  border: 1px solid rgba(178, 180, 189, 0.5);
+  border: 1px solid #55585B;
   border-radius: 12.5px;
   height: 20px;
   max-height: 20px;
@@ -16,9 +16,10 @@
     font-weight: 500;
     letter-spacing: 0.38px;
     line-height: 14px;
+    color: '#55585B';
   }
   &.support {
-    color: $green;
+    color: '#268055';
   }
   &.refute {
     color: $red;
