update color contrast for contribution page

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -23,7 +23,7 @@ $lightgreen: #a6d120;
 $yellow: #f2ba1d;
 $orange: #ec8a21;
 $green: #12b255;
-$indigo: #3476d6;
+$indigo: #1b56b0;
 $purple: #724586;
 
 $avatar-colors: $yellow, $orange, $green, $indigo, $purple,
