update color accessibility

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -18,7 +18,7 @@ $blue: #557ce0; // use in media links
 $darkblue: #0a122d;
 $darkorange: #ef5f20;
 $red: #e50e56; //use in refute hypothesis
-$lightgreen: #a6d120;
+$lightgreen: #2A4641;
 // use in contribution heirarchy - in order QHED-AAA
 $yellow: #f2ba1d;
 $orange: #ec8a21;
